--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,17 +1,16 @@
+<div class="color-navbar d-flex align-items-center justify-content-between">
+    <div class="float-start m-4">
+        <img src="../images/train.png" alt="">
+    </div>
 
-<div>
-<div class="float-start">
-    <img src="../images/train.png" alt="">
-</div>
+    <ul class="nav justify-content-end  m-4">
 
-<ul class="nav justify-content-end ">
-    
-    <li class="nav-item">
-      <a class="nav-link active fw-bold text-danger" aria-current="page" href="#">Connection</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">My last trips</a>
-    </li>
-    
-</ul>
+        <li class="nav-item">
+            <a class="nav-link active fw-bold text-danger" aria-current="page" href="#">Connection</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">My last trips</a>
+        </li>
+
+    </ul>
 </div>
