--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <!-- navbar -->
+    <%- include('navbar') %> 
     <div class="container">
         <div class="row">
             <div class="d-flex justify-content-center">
