--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,19 +2,28 @@ body {
 
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: rgb(118,110,249);
-background: linear-gradient(0deg, rgba(118,110,249,1) 0%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(0deg, rgba(118,110,249,1) 0%, rgba(0,212,255,1) 100%);
+ 
 }
   
-
-
 a {
   color: #00B7FF;
 }
-
+/* HEADER */
 .color-navbar{
   background-color: aliceblue;
   height: 100px;
   padding-top: 0px;
+}
 
+.name-site{
+  font-size: 30px;
+  font-weight: bold;
+  padding-left: 30px;
+}
 
+/* FOOTER */
+.footer-text{
+  text-align: center;
+  color: azure;
 }
