--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,26 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+  </head>
+  <body>
+    <!-- navbar -->
+    <%- include('navbar') %> 
+
+    <!-- form -->
+    <div class="container d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
+        <div class="row">
+            
+        </div>
+    </div>
+
+
+
+  
+    
+<!-- footer -->
+<%- include('footer') %>
+  </body>
