--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -19,11 +19,12 @@
                         <h2>One-way ticket :</h2>
                     </label>
 
-                        <form class="sign-in d-flex align-items-center col-4">
+                        <form class="sign-in d-flex align-items-center col-6">
                             <input name="" type="text" class="form-control m-2" id="formGroupExampleInput"
                                 placeholder="From : Paris, Marseille ...">
                             <input name="" type="text" class="form-control m-2" id="formGroupExampleInput2"
                                 placeholder="To : Lille, Nantes ...">
+                                <input name="" type="date" class="form-control m-2" id="formGroupExampleInput2">
                             <button type="button" action="submit" class="btn btn-danger m-2">Go</button>
                         </form>
 
@@ -31,4 +32,6 @@
                 </div>
             </div>
         </div>
+             <!-- footer -->
+     <%- include('footer') %>
 </body>
