--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,10 @@ h2{
   color : white;
 }
 
+h6{
+  color:gray;
+}
+
 .color-navbar{
   background-color: aliceblue;
   height: 100px;
@@ -30,4 +34,17 @@ h2{
 .footer-text{
   text-align: center;
   color: azure;
+}
+
+/* ticket in result*/
+.ticket{
+  height: 120px;
+  border-radius: 5px;
+  padding: 30px;
+}
+
+
+/*Tableau des resultats page result*/
+.resultTab{
+  margin-top: 100px;
 }
