--- a/views/error.ejs
+++ b/views/error.ejs
@@ -11,10 +11,11 @@
     <%- include('navbar') %> 
 
     <!-- form -->
-    <div class="container d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
+    <div class="container d-flex flex-column align-items-center error-page-style " style="height: 100vh;">
         <div class="row">
-            
+            <h4>Oops ! No train available</h4>
         </div>
+        <a class="btn btn-danger mt-3" href="#" role="button">Home</a>
     </div>
 
 
