recuperation de la bonne page index

--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -45,7 +45,7 @@
                                     <td>15:00 pm</td>
                                     <td>93 €</td>
                                   </tr>
-                                  <tr class="bg-secondary">
+                                  <tr class="color-lastline">
                                     <th scope="row ">Total</th>
                                     <td></td>
                                     <td></td>
@@ -54,7 +54,9 @@
                                 </tbody>
                             
                     </table>
-
+                    <div class="col-12 d-flex justify-content-end">
+                    <a class="btn btn-danger  " href="#" role="button">Confirm</a>
+                    </div>
                     
                 </div>
             </div>
