--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -9,7 +9,7 @@
             <a class="nav-link active fw-bold text-danger" aria-current="page" href="#">Connection</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" href="#">My last trips</a>
+            <a class="nav-link fw-bold" style="color: black;" href="#">My last trips</a>
         </li>
 
     </ul>
