--- a/views/result.ejs
+++ b/views/result.ejs
@@ -11,7 +11,7 @@
 <body>
     <!-- navbar -->
     <%- include('navbar') %>
-        <!-- form-->
+        <!-- affichage résultats trouvés -->
         <div class="container d-flex flex-column align-items-center resultTab" style="height: 88vh;">
             <div class="row col-12">
                 <div class="d-flex flex-column justify-content-center align-items-center">
@@ -19,25 +19,16 @@
                     <label for="sign-in">
                         <h2>Tickets available on ?? :</h2>
                     </label>
-
+                    <% for (element of journeyFind) {%>
                     <div class="ticket bg-white col-8 d-flex align-items-center justify-content-between p-10 mt-4">
-                        <h3 class="m-2">Paris / Lille</h3>
-                        <h6 class="m-2">train departure at : 15:00 pm</h6>
+                        <h3 class="m-2"><%=element.departure%> / <%=element.arrival%></h3>
+                        <h6 class="m-2">train departure at : <%=element.departureTime%></h6>
                         <div class="d-flex align-items-center">
-                            <h3 class="m-2">93e</h3>
+                            <h3 class="m-2"><%=element.price%>€</h3>
                             <button type="button" action="submit" class="btn btn-danger m-2">Ok</button>
                         </div>
                     </div>
-
-                    <div class="ticket bg-white col-8 d-flex align-items-center justify-content-between p-10 mt-4">
-                        <h3 class="m-2">Paris / Lille</h3>
-                        <h6 class="m-2">train departure at : 15:00 pm</h6>
-                        <div class="d-flex align-items-center">
-                            <h3 class="m-2">93e</h3>
-                            <button type="button" action="submit" class="btn btn-danger m-2">Ok</button>
-                        </div>
-                    </div>
-
+                    <%}%>
                 </div>
             </div>
         </div>
