--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,9 +18,9 @@
                     <!-- SIGN UP AREA -->
                     <div class="col-2 d-flex flex-column m-4">
                         <label for="sign-in">
-                            <h2 class="text-center">sign-up :</h2>
+                            <h2 class="text-center">sign-in :</h2>
                         </label>
-                        <form action="/users/sign-up" method="post" class="sign-in d-flex flex-column justify-content-center align-items-center">
+                        <form action="/users/sign-in" method="post" class="sign-in d-flex flex-column justify-content-center align-items-center">
                             <input name="mail" type="text" class="form-control mb-3" id="formGroupExampleInput"
                                 placeholder="Email">
                             <input name="password" type="text" class="form-control mb-3" id="formGroupExampleInput2"
@@ -31,7 +31,7 @@
                      <!-- SIGN IN AREA -->
                     <div class="col-2 d-flex flex-column m-4">
                         <label for="sign-in">
-                            <h2 class="text-center">sign-in :</h2>
+                            <h2 class="text-center">sign-up :</h2>
                         </label>
                         <form action="/users/sign-up" method="post" class="sign-in d-flex flex-column justify-content-center align-items-center">
                             <input name="lastname" type="text" class="form-control mb-3" id="formGroupExampleInput"
