--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -31,20 +31,16 @@
                                   </tr>
                                 </thead>
                                 <tbody>
+                                  <% var total ;
+                                  for (element of basketTable) {%>
                                   <tr>
                                     <th scope="row">1</th>
-                                    <td>Paris / Lille</td>
-                                    <td>02/08/2019</td>
-                                    <td>15:00 pm</td>
-                                    <td>93 €</td>
+                                    <td><%=element.departure%> / <%=element.arrival%></td>
+                                    <td><%=element.date%></td>
+                                    <td><%=element.departureTime%> pm</td>
+                                    <td><%=element.price%> €</td>
                                   </tr>
-                                  <tr>
-                                    <th scope="row">1</th>
-                                    <td>Paris / Lille</td>
-                                    <td>02/08/2019</td>
-                                    <td>15:00 pm</td>
-                                    <td>93 €</td>
-                                  </tr>
+                                  <%}%>
                                   <tr class="color-lastline">
                                     <th scope="row ">Total</th>
                                     <td></td>
