--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -32,7 +32,7 @@
                                 </thead>
                                 <tbody>
                                   <% var total ;
-                                  for (element of basketTable) {%>
+                                  for (element of tableau) {%>
                                   <tr>
                                     <th scope="row">1</th>
                                     <td><%=element.departure%> / <%=element.arrival%></td>
