--- a/views/result.ejs
+++ b/views/result.ejs
@@ -17,7 +17,7 @@
                 <div class="d-flex flex-column justify-content-center align-items-center">
 
                     <label for="sign-in">
-                        <h2>Tickets available on ?? :</h2>
+                        <h2>Tickets available on <%=journeyFind.date%> :</h2>
                     </label>
                     <% for (element of journeyFind) {%>
                     <div class="ticket bg-white col-8 d-flex align-items-center justify-content-between p-10 mt-4">
