page last trips

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -6,10 +6,10 @@
     <ul class="nav justify-content-end  m-4">
 
         <li class="nav-item">
-            <a class="nav-link active fw-bold text-danger" aria-current="page" href="#">Connection</a>
+            <a class="nav-link active fw-bold text-danger" aria-current="page" href="/login">Connection</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link fw-bold" style="color: black;" href="#">My last trips</a>
+            <a class="nav-link fw-bold" style="color: black;" href="/last-trips">My last trips</a>
         </li>
 
     </ul>
