lastTrip push in user

--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -51,7 +51,7 @@
                             
                     </table>
                     <div class="col-12 d-flex justify-content-end">
-                    <a class="btn btn-danger  " href="/last-trips?" role="button">Confirm</a>
+                    <a class="btn btn-danger  " href="/last-trips" role="button">Confirm</a>
                     </div>
                     
                 </div>
