first push heroku"

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,6 +1,6 @@
 <div class="color-navbar d-flex align-items-center justify-content-between">
     <div class="float-start m-4">
-        <img src="../images/train.png" alt=""><span class="name-site">Ticketac</span>
+       <a href="/homepage"><img src="../images/train.png"  href="/home" alt=""></a><span class="name-site">Ticketac</span>
     </div>
 
     <ul class="nav justify-content-end  m-4">
