--- a/views/error.ejs
+++ b/views/error.ejs
@@ -15,7 +15,7 @@
         <div class="row">
             <h4>Oops ! No train available</h4>
         </div>
-        <a class="btn btn-danger mt-3" href="/login" role="button">Home</a>
+        <a class="btn btn-danger mt-3" href="/homepage" role="button">Home</a>
     </div>
 
 
