--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -51,34 +51,31 @@
                             
                     </table>
                     <div class="col-12 d-flex justify-content-end">
-                    <a class="btn btn-danger  " href="/last-trips" role="button">Confirm</a>
+                      <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Confirm</button>
                     </div>
-
                     <!-- Button trigger modal -->
-<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Confirm
-</button>
+
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="myModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Reservation effectuée</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        Merci pour votre confiance
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <a href="/homepage"> <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Retour à l'accueil</button></a>
+        <a href="/last-trips"> <button type="button" class="btn btn-primary">Voir tous mes trips</button></a>
       </div>
     </div>
-  </div>
-</div>
+  </div>            
                 </div>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="../javascripts/script.js"></script>
 </body>
