--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -69,7 +69,7 @@
       </div>
       <div class="modal-footer">
         <a href="/homepage"> <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Retour à l'accueil</button></a>
-        <a href="/last-trips"> <button type="button" class="btn btn-primary">Voir tous mes trips</button></a>
+        <a href="/last-trips"> <button type="button" class="btn btn-primary">Voir tout mes trips</button></a>
       </div>
     </div>
   </div>            
