--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <!-- navbar -->
-    <%- include('navbar') %>
+    <%- include('navbar-loggin') %>
     <!-- form-->
         <div class="container d-flex flex-column align-items-center justify-content-center" style="height: 88vh;">
             <div class="row col-12">
