--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,64 +1,152 @@
-body {
-
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: rgb(118,110,249);
-  background: linear-gradient(0deg, rgba(118,110,249,1) 0%, rgba(0,212,255,1) 100%);
- 
-}
-  
-a {
-  color: #00B7FF;
+body{
+    font-family: sans-serif;
+    
 }
 
-h2,h4{
-  color : white;
+/* p{
+margin-top: 0;
+} */
+
+.home{
+
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#c5deea+0,8abbd7+43,066dab+100 */
+background: rgb(197,222,234); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(197,222,234,1) 0%, rgba(138,187,215,1) 43%, rgba(6,109,171,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(197,222,234,1) 0%,rgba(138,187,215,1) 43%,rgba(6,109,171,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(197,222,234,1) 0%,rgba(138,187,215,1) 43%,rgba(6,109,171,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5deea', endColorstr='#066dab',GradientType=0 ); /* IE6-9 */
+
+height: 100vh;
+
 }
 
-h6{
-  color:gray;
+/* HOME PAGE ------------------------ */
+.homeTitle{
+    margin-left: 27%;
+    margin-bottom: 20px;
+    padding-top: 50px;
+    font-size: 25px;
+    color: aliceblue;
+}
+.homeTexte{
+    
+    margin-bottom: 5px;
+    padding-top: 10px;
+    font-size: 18px;
+    color: aliceblue;
+}
+.logIn{
+    margin-bottom: 20px;
+    padding-top: 50px;
+    font-size: 25px;
+    color: aliceblue;
 }
 
-.error-page-style{
-  margin-top: 100px;
-}
-.basket-page-style{
-  margin-top: 100px;
-}
-.tab-style{
-  margin-top: 20px;
-}
-/* HEADER */
-.color-navbar{
-  background-color: aliceblue;
-  height: 100px;
-  padding-top: 0px;
+.inputField{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.name-site{
-  font-size: 30px;
-  font-weight: bold;
-  padding-left: 30px;
+.inputFieldLogin{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: center;
 }
 
-/* FOOTER */
-.footer-text{
+.footer{
+  width: 100%;
   text-align: center;
-  color: azure;
+  bottom: 0;
+  position: absolute;
+  color: aliceblue;
+  font-style: italic;
+  font-size: 15px;
+  opacity: 0.5;
 }
 
-/* ticket in result*/
-.ticket{
-  height: 120px;
-  border-radius: 5px;
-  padding: 30px;
+.divImg{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.cityImg{
+   width: 40%;
 }
 
 
-/*Tableau des resultats page result*/
-.resultTab{
-  margin-top: 100px;
+
+/* PAGE 1 -------------------------- */
+
+.resultField{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-/* TAB */
-.color-lastline{
-  background-color: rgb(231, 175, 189);
+
+.resultCard{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; 
 }
+
+.card{
+   margin-bottom: 10px;  
+}
+
+/* No Train Message -------------------------- */
+.noTrainMessage{
+    padding-top: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* MyTickets page -------------------------- */
+.tableDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.table{
+    width: 75%;
+}
+
+
+
+/* Resume page -------------------------- */
+.inputFieldResume{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.inputResume{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.resume{
+    font-size: 20px;
+}
+
+/* Modal -------------------------------- */
+
+.tableModal{
+    width: 100%;
+}
+
+
