--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,27 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Error</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-  </head>
-  <body>
-    <!-- navbar -->
-    <%- include('navbar') %> 
-
-    <!-- form -->
-    <div class="container d-flex flex-column align-items-center error-page-style " style="height: 100vh;">
-        <div class="row">
-            <h4>Oops ! No train available</h4>
-        </div>
-        <a class="btn btn-danger mt-3" href="/homepage" role="button">Home</a>
-    </div>
-
-
-
-  
-    
-<!-- footer -->
-<%- include('footer') %>
-  </body>
+<h1><%= message %></h1>
+<h2><%= error.status %></h2>
+<pre><%= error.stack %></pre>
