--- a/views/noTrain.ejs
+++ b/views/noTrain.ejs
@@ -19,10 +19,10 @@
       class="navbar navbar-expand-lg navbar-light bg-light"
       style="background-color: #e3f2fd"
     >
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/index">
         <img src="/images/train.png" width="30" height="30" alt="" />
       </a>
-      <a class="navbar-brand" href="#">Ticketac</a>
+      <a class="navbar-brand" href="/index">Ticketac</a>
 
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto"></ul>
@@ -43,56 +43,11 @@
 
     <div class="home">
       <!-- Test title -->
-      <h3 class="homeTitle">One-way ticket :</h3>
-
-      <!-- Input Field -->
-      <div class="inputField">
-        <form class="form-inline" action="/journeys" method="POST">
-          <div class="form-group">
-            <input
-              name="departureCity"
-              type="text"
-              class="form-control"
-              id="inputPassword2"
-              placeholder="From: Paris, Marseille..."
-              required
-            />
-          </div>
-
-          <div class="form-group mx-sm-3">
-            <input
-              name="arrivalCity"
-              type="text"
-              class="form-control"
-              id="inputPassword2"
-              placeholder="To: Lille, Nantes... "
-              required
-            />
-          </div>
-          
-
-          <div class="form-group">
-            <input
-              name="journeyDate"
-              type="date"
-              class="form-control"
-              id="inputPassword2"
-              placeholder="Date : 02/08"
-              required
-            />
-          </div>
-
-          <button type="submit" class="btn btn-danger mx-sm-3">Go</button>
-          <!-- <button class="btn btn-danger mx-sm-3" >Go</button> -->
-          <!-- <a class="btn btn-danger mx-sm-3" href="page1.html" role="button">Go</a> -->
-        </form>
-       <P class="homeTexte">Data test</P> 
-       <P class="homeTexte">Marseille / Nantes	22/11/2018</P> 
-       <P class="homeTexte">Lille / Melun	23/11/2018</P> 
-       <P class="homeTexte">Nantes / Melun	21/11/2018</P> 
-        <div class="divImg">
-          <img src="/images/landmark.png" class="cityImg" alt="" />
-        </div>
+      <div class="noTrainMessage">
+        <h3 style="color: white; margin-bottom: 15px">
+          Oops ! No trains available...
+        </h3>
+        <a href="/index" class="btn btn-danger mx-sm-3">Home</a>
       </div>
 
       <div class="footer">
